open-document-selector: mores fixes
Adding some css to make it look better.
Calculate listbox height in term of row height with a limit
of ten visible rows ( if more, we have scrollbars )

--- a/gedit/gedit.adwaita.css
+++ b/gedit/gedit.adwaita.css
@@ -10,16 +10,16 @@ GeditWindow .pane-separator:hover {
     color: @borders;
 }
 
-.gedit-open-document-selector-listbox .list-row {
+.open-document-selector-listbox-row {
     border-bottom: 1px solid shade(@theme_bg_color, 0.95);
-    padding: 6px;
+    padding: 6px 6px 6px 12px;
 }
 
-.gedit-open-document-selector-listbox .name-label {
+.open-document-selector-listbox-row .name-label {
     color: @theme_fg_color;
 }
 
-.gedit-open-document-selector-listbox .path-label {
+.open-document-selector-listbox-row .path-label {
     font-size: 80%;
     color: @insensitive_fg_color;
 }
